--- a/html/index.html
+++ b/html/index.html
@@ -58,13 +58,19 @@
 	b = 4.;
 	</script>
 
+	<script type='code/css' title="cssのサンプル">
+		html, body {
+			height:100%;
+		}
+	</script>
+
 	<!--リリース用concat.min.js-->
 	<!--<script src="./js/codehighlight.min.js"></script>-->
 
 	<!--1つずつ読み込むデバッグ用-->
-	<script src="./js/codehighlight.js"></script>
+	<script src="./javascript/codehighlight.js"></script>
 	<script>
-		chl.loadTemplate('/js/default-template.js');
+		chl.loadTemplate('/javascript/define-javascript.js');
 	</script>
 
 </body>
