--- a/html/playground.html
+++ b/html/playground.html
@@ -5,6 +5,10 @@
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js / Play Ground</title>
 	<link rel="stylesheet" href="./css/codehighlight.css">
+
+	<!--
+		PlayGroundではjQueryをロードしていますが、codehighlight.jsには必須ではありません。
+	-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	<style>
