--- a/html/playground.html
+++ b/html/playground.html
@@ -4,13 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js / Play Ground</title>
-	<link rel="stylesheet" href="./css/codehighlight.css">
 
-	<!--
-		PlayGroundではjQueryをロードしていますが、codehighlight.jsには必須ではありません。
-	-->
+	<!-- PlayGroundではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+	<link rel="stylesheet" href="./css/codehighlight.css">
 	<style>
 		html{
 			height:100%;
@@ -32,9 +30,6 @@
 			height:30%;
 			resize: none;
 			margin:5px;
-		}
-		pre.code.highlight {
-			max-height:30%;
 		}
 	</style>
 </head>
