--- a/html/playground.html
+++ b/html/playground.html
@@ -8,7 +8,7 @@
 	<!-- PlayGroundではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-	<link rel="stylesheet" href="./css/codehighlight.css">
+	<link rel="stylesheet" href="./dist/codehighlight.css">
 	<style>
 		html{
 			height:100%;
@@ -53,7 +53,31 @@
 </textarea>
 
 		<script src="./js/codehighlight.min.js"></script>
-		<script src="./javascript/playground.js"></script>
+
+		<script>
+			"use strict";
+			$(function() {
+
+				$('button').on('click', function() {
+					// すでに表示しているhighlightコードは削除
+					$('.chl').remove();
+
+					var codetype = $('select.code-type').val();
+
+					var script = $('<script>')
+						.attr('type', `code/${codetype}`)
+						.attr('title', `sample code`);
+
+					$('body').append(script);
+
+					script.html($('textarea').val());
+
+					new CHL.CodeHighLight().execute();
+				});
+
+				$('button').click();
+			});
+		</script>
 </body>
 
 </html>
