--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js</title>
-	<link rel="stylesheet" href="./css/codehighlight.css">
+	<link rel="stylesheet" href="./codehighlight.css">
 </head>
 
 <body>
@@ -96,20 +96,19 @@
       </script>
 
 
-	<!-- min.js -->
-	<script src="./js/codehighlight.all.js"></script>
+	<!-- full package js -->
+	<script src="./codehighlight.js"></script>
 	<script>
-		new CHL.CodeHighLight().execute();
+		CodeHighlight.execute();
 	</script>
 
 	<!-- 1つずつ読み込むデバッグ用 -->
 <!--
-	<script src="./js/TemplateManager.js"></script>
-	<script src="./js/Code.js"></script>
-	<script src="./js/CodeHighLight.js"></script>
+	<script src="./TemplateManager.js"></script>
+	<script src="./Code.js"></script>
+	<script src="./CodeHighlight.js"></script>
 	<script>
-		var chl = new CHL.CodeHighLight();
-		chl.loadTemplate('/js/defines/javascript.js');
+		CodeHighlight.loadTemplate('js/defines/javascript.js');
 	</script>
 -->
 
