--- a/test/playground.html
+++ b/test/playground.html
@@ -4,17 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js / Play Ground</title>
-
-	<!-- PlayGroundではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-	<link rel="stylesheet" href="./dist/codehighlight.min.css">
+	<link rel="stylesheet" href="./codehighlight.min.css">
 	<style>
 		html{
 			height:100%;
 			margin:0;
 			padding:0;
-			tab-size:4;
 		}
 		body {
 			margin:0;
@@ -51,7 +46,10 @@
 	};
 	// -> HELLO, codehighlight.js!
 </textarea>
-		<script src="./dist/codehighlight.min.js"></script>
+		<script src="./codehighlight.min.js"></script>
+
+		<!-- PlayGround.jsではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="./playground.js"></script>
 </body>
 
