--- a/test/index.html
+++ b/test/index.html
@@ -35,9 +35,8 @@
 			// &lt;もそのまま出る
 		}
 		window.alert('YEAH!!'); // <-alert実行されないでしょ
-		console.log('');console.log("");
 
-		console.log('//ちゃんと閉じないクォート
+		console.log('');console.log("");
 
 		var function1 = function(arg1, arg2){};
 		let fun2fnc = function(a1rg, a2rg){};
@@ -49,6 +48,8 @@
 		if(/TEST|te\/st/g.test(`testMojiretsu`)) {
 			// 正規表現のテスト
 			`testMojiretsu`.replace(/Mojiretsu/g , 'Strings');
+
+			console.log("// not comment");
 		}
 	-->
 	</script>
@@ -65,6 +66,15 @@
 	<script type='code/css' title="cssのサンプル">
 		html, body {
 			height:100%;
+			width:100%;
+			border : none;
+			font-size: 10px;
+			font-weight :bold;
+			text-align:center;margin:0 4em;
+
+			/* color test */
+			color:rgb(0,255,0);
+			background: #0000FF;
 		}
 	</script>
 
