--- a/test/playground.html
+++ b/test/playground.html
@@ -4,11 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js / Play Ground</title>
-	<link rel="stylesheet" href="./codehighlight.min.css">
+	<link rel="stylesheet" href="./codehighlight.css">
 	<style>
-		.info{
-			font-size:1.1em;
+		h1 {
+			font-family:"arial black";
 			font-weight:bold;
+		}
+		.info{
+			margin-top:1em;
+			font-size:1.1em;
 		}
 		html{
 			height:100%;
@@ -25,10 +29,13 @@
 		}
 
 		textarea{
-			width:100%;
+			font-size:1em;
+			width:calc(100% - 2px);
 			height:30%;
 			resize: none;
-			margin:5px;
+			padding:0;
+			box-shadow: 1px 1px 2px #666;
+			border:1px solid black;
 		}
 	</style>
 </head>
@@ -54,7 +61,7 @@
 	};
 	// -> HELLO, codehighlight.js!
 </textarea>
-		<script src="./codehighlight.min.js"></script>
+		<script src="./codehighlight.js"></script>
 
 		<!-- PlayGround.jsではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
