--- a/test/index.html
+++ b/test/index.html
@@ -54,6 +54,7 @@
 	var f=true;var g=false;
 	var h = 2 + 4 /5+6/g;//正規表現に見えるかもしれない計算式
 	var i = +1; var j = -2; var k=+1; var l=-2;
+	var falsy = [undefined, null, "", 0, false, NaN];
 	</script>
 
 	<script type='code/css' title="cssのサンプル">
