use min.js (check release version)

--- a/test/playground.html
+++ b/test/playground.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js / Play Ground</title>
-	<link rel="stylesheet" href="./codehighlight.css">
+	<link rel="stylesheet" href="./codehighlight.min.css">
 	<style>
 		h1 {
 			font-family:"arial black";
@@ -61,7 +61,7 @@
 	};
 	// -> HELLO, codehighlight.js!
 </textarea>
-		<script src="./codehighlight.js"></script>
+		<script src="./codehighlight.min.js"></script>
 
 		<!-- PlayGround.jsではjQueryをロードしていますが、codehighlight.jsには必須ではありません。 -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
