正規表現まわりを修正

--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,7 @@
 
 		if(/TEST|te\/st/g.test(`testMojiretsu`)) {
 			// 正規表現のテスト
-			`testMojiretsu`.replace(/Mojiretsu/g , 'Strings');
+			`testMojiretsu`.replace(/Moji'retsu/g , 'Strings');
 
 			console.log("// not comment");
 		}
