正規表現とコメントの複合技バグを修正

--- a/test/index.html
+++ b/test/index.html
@@ -37,6 +37,7 @@
 
 		if(/TEST|te\/st/g.test(`testMojiretsu`)) {
 			// 正規表現のテスト
+			var regexp = /ab/; // comment
 			`testMojiretsu`.replace(/Moji'retsu/g , 'Strings');
 
 			console.log("// not comment");
