--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeHighlight.js</title>
-	<link rel="stylesheet" href="./codehighlight.css">
+	<link rel="stylesheet" href="./dist/codehighlight.min.css">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
 	</code>
 
 	<!-- full package js -->
-	<script src="./codehighlight.js"></script>
+	<script src="./dist/codehighlight.min.js"></script>
 	<script>
 		CodeHighlight.execute();
 	</script>
