--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+	<h1>codehighlight.js</h1>
+	<div>
+		codehighlight.jsのサンプルページです。<br>
+		記述の例は<a href='https://github.com/TOMO-YOSHIDA/codehighlight.js/blob/gh-pages/index.html'>ソースファイル</a>を見てください。
+	</div>
 	<script type="code/ECMAScript" title="hoge.js">
 	<!--
 		var a = /A/; // １文字正規表現
