--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		CodeHighlight.loadTemplate('./public/js/define/html.js');
 	</script>-->
 
-	<script src="./public/concat/codehighlight.min.js"></script>
+	<script src="./dist/codehighlight.min.js"></script>
 
 	<script>
 		CodeHighlight.execute();
